feat(monorepo): make forge-1.16.5 SOURCE-COMPLETE (fix version-shape errors)
Port the 1.21-shaped lane sources to the 1.16.5 Forge 36.2.34 API surface
(verified against the userdev jar, official channel = SRG class names +
Mojang member names):

- SkinRefreshHandler: drop PositionMoveRotation/ClientboundPlayerPositionPacket;
  use SPlayerPositionLookPacket 7-arg ctor via ServerPlayNetHandler#teleport and
  the SRespawnPacket keepAllPlayerData cascade (vanilla PlayerList#respawn shape)
- EverlastingSkins/SkinRestorer: 1.16.5 has no forge.event.Server* events; FML
  server lifecycle events (MOD bus) replace ServerAboutToStart/Starting/Stopping
- MetricsDumper: ServerTickEvent has no getServer(); resolve via
  ServerLifecycleHooks.getCurrentServer; drop Java 11 Path.of/Files.writeString
- Entity accessors: level field/getLevel(), yRot/xRot fields, abilities field,
  connection field, NetworkManager.channel()
- Delete lane-local JavaHttpClient (java.net.http, JDK 11); :common's
  HttpsUrlConnectionHttpClient is the Java-8 client
- Permission services: adapt to :common IPermissionService(UUID,int,String)
- build: PAPI + spigot-api + jetbrains-annotations compileOnly (Java 8 bytecode)
- Remove duplicate resources (identical to :common) and the orphaned
  everlastingskins.mixins.json (zero-mixin lane)

Verification: compileJava green (javac 8, -Werror), build + reobfJar +
verifyNoMixin green; no test sources in the lane.