@@ -11,7 +11,8 @@ import levosilimo.everlastingskins.Config;
 import levosilimo.everlastingskins.EverlastingSkins;
 import net.minecraft.server.MinecraftServer;
 import net.minecraftforge.event.TickEvent;
-import net.minecraftforge.eventbus.api.listener.SubscribeEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.server.ServerLifecycleHooks;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -27,13 +28,15 @@ import java.nio.file.StandardCopyOption;
  */
 public class MetricsDumper {
 
-    private static final Path RELATIVE_TARGET = Path.of("dumps", "everlastingskins", "metrics.json");
+    private static final Path RELATIVE_TARGET = java.nio.file.Paths.get("dumps", "everlastingskins", "metrics.json");
 
     @SubscribeEvent
     public void onServerTick(TickEvent.ServerTickEvent event) {
         if (event.phase != TickEvent.Phase.END) return;
         if (!Config.METRICS_ENABLED.get()) return;
-        MinecraftServer server = event.getServer();
+        // 1.16.5's ServerTickEvent carries no server reference (1.17+
+        // addition); resolve the server through the lifecycle hooks.
+        MinecraftServer server = ServerLifecycleHooks.getCurrentServer();
         if (server == null) return;
         int intervalTicks = Config.METRICS_DUMP_INTERVAL_SECONDS.get() * 20;
         if (intervalTicks <= 0 || server.getTickCount() % intervalTicks != 0) return;
@@ -42,14 +45,13 @@ public class MetricsDumper {
 
     static void writeMetricsJson(MinecraftServer server) {
         try {
-            Path target = server.getFile(RELATIVE_TARGET.toString());
+            Path target = server.getFile(RELATIVE_TARGET.toString()).toPath();
             Path dir = target.getParent();
             if (dir == null) return;
             Files.createDirectories(dir);
             Path temp = dir.resolve(target.getFileName() + ".tmp");
-            Files.writeString(temp, MetricsFormat.json(SkinMetrics.INSTANCE.snapshot()),
-                    StandardCharsets.UTF_8);
-            Files.move(temp, target, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
+            Files.write(temp, MetricsFormat.json(SkinMetrics.INSTANCE.snapshot())
+                    .getBytes(StandardCharsets.UTF_8));            Files.move(temp, target, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
         } catch (IOException | RuntimeException e) {
             EverlastingSkins.logger.warn("Failed to write metrics dump", e);
         }
